--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">VinilosApp</string>
     <string name="title_albums">Albums</string>
     <string name="title_musicians">Musicians</string>
-    <string name="UrlAPI">thedcompany.herokuapp.com</string>
+    <string name="title_collectors">Collectors</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
